--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "class-variables-arithmatic-operators-assigment-operator",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
